# alloy-eyes-sdk

./: .gitignore  CMakeLists.txt  README.md  kendryte-package.json
components/: k210-cross.cmake
components/fat-fs-module/lib/: diskio.c  ff.c  ff.h  ffconf.h  sdcard.c  sdcard.h  w25qxx.c  w25qxx.h
components/jsoncpp-sdk/: CMakeLists.txt
components/jsoncpp-sdk/jsoncpp/: CMakeLists.txt
components/littlevgl-gui-module/: CMakeLists.txt  lv_conf.h  lvgl.h
components/littlevgl-gui-module/lvgl/lv_fonts/: bell.c  bell_press.c  big_pic.c  blacklist_pic.c  chin.c  chinese.c  del_per.c  delete.c  delete_all.c  download.c  face_rec.c  left_btn.c  left_press.c  lv_font_dejavu_10.c  one_config.c  ota_pic.c  right_btn.c  right_press.c  set_button.c  upload.c  wifi_pic.c
components/littlevgl-gui-module/lvgl/lv_hal/: lv_hal_disp.c  lv_hal_disp.h
components/littlevgl-gui-module/lvgl/lv_misc/: lv_mem.h  lv_task.c
components/littlevgl-gui-module/lvgl/lv_objx/: lv_kb.c  lv_list.c
components/mqtt-sdk/: CMakeLists.txt
components/mqtt-sdk/paho.mqtt.embedded-c-1.0.0/MQTTClient-C/samples/linux/: stdoutsub
components/mqtt-sdk/paho.mqtt.embedded-c-1.0.0/MQTTPacket/src/: MQTTDeserializePublish.c
components/rapidjson-sdk/rapidjson-1.1.0/: CMakeLists.txt
components/rapidjson-sdk/rapidjson-1.1.0/include/rapidjson/: document.h
fat-fs-module/: CMakeLists.txt
fat-fs-module/lib/: diskio.c  sdcard.c  sdcard.h  w25qxx.c
kendryte_libraries/kendryte_standalone-sdk/: CMakeLists.txt
src/dvp_dual_sensor/: debug_log.h  gc0308.c  gc0308.h  lcd.c  lcd.h  main.c
src/fs/: board_config.h  debug_log.h  flash_spi.c  flash_spi.h  main.c  sd_spi.c  sd_spi.h
src/gpio_led/: README.md  main.c
src/gpiohs_io_key/: README.md  io_key.c  io_key.h  main.c
src/lcd/: README.md  lcd.c  lcd.h  main.c
src/lcd_image/: README.md  board_config.h  main.c  st7789.h
src/mic_play/: main.c
src/motor/: main.c  motor.c  motor.h
src/pwm/: board_config.h  main.c
src/rtc/: main.c
src/tp/: cst826.c  cst826.h  lcd.c  main.c  st7789.c  tp_driver.c  tp_driver.h
src/uart/: README.md  board_config.h  main.c
src/watchdog/: README.md
